test/bad/eps1.pacc
/*
nopacc 5:12 'expected NameStart:c:0'
*/

S ← ε "foo"
